--- a/chess.html
+++ b/chess.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/chess.css">
-    <script src="../jquery-3.4.1.min.js"></script>
+    <script src="./jquery-3.4.1.min.js"></script>
     <script src="chess.js"></script>
 </head>
 <body>
